@@ -36,7 +36,8 @@ __all__ = ["copyfileobj", "copyfile", "copymode", "copystat", "copy", "copy2",
            "register_archive_format", "unregister_archive_format",
            "get_unpack_formats", "register_unpack_format",
            "unregister_unpack_format", "unpack_archive",
-           "ignore_patterns", "chown", "which"]
+           "ignore_patterns", "chown", "which", "get_terminal_size",
+           "SameFileError"]
            # disk_usage is added later, if available on the platform
 
 class Error(OSError):
