@@ -33,6 +33,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #22665: Add missing get_terminal_size and SameFileError to
+  shutil.__all__.
+
 - Issue #17381: Fixed handling of case-insensitive ranges in regular
   expressions.
 
